Change logo in nav drawer, and about screen

--- a/ground/src/main/res/layout/nav_drawer_header.xml
+++ b/ground/src/main/res/layout/nav_drawer_header.xml
@@ -46,36 +46,31 @@
       android:gravity="center_vertical"
       android:orientation="horizontal"
       android:paddingTop="24dp"
-      android:paddingBottom="24dp">
-
-      <com.google.android.material.imageview.ShapeableImageView
-        android:id="@+id/ground_logo"
-        style="@style/NavDrawerHeader.Image"
-        android:src="@drawable/ground_logo" />
-
-      <LinearLayout
+      android:paddingBottom="24dp"
+      android:baselineAligned="false">
+      <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:orientation="vertical">
-
-        <TextView
+        android:layout_weight="1">
+        <com.google.android.material.imageview.ShapeableImageView
+          android:id="@+id/reseed_logo_h"
+          style="@style/NavDrawerHeader.Title"
+          android:layout_width="113dp"
           android:layout_height="wrap_content"
-          android:layout_width="wrap_content"
-          android:textSize="18sp"
-          android:paddingStart="4dp"
-          android:paddingEnd="4dp"
-          android:text="@string/app_name"
-          android:fontFamily="@font/google_sans"/>
-
-      </LinearLayout>
-      <com.google.android.material.imageview.ShapeableImageView
-        android:id="@+id/user_image"
-        style="@style/NavDrawerHeader.Image"
-        app:imageUrl="@{user.photoUrl}"
-        android:layout_marginEnd="24dp"
-        tools:background="@drawable/ground_logo" />
-
+          android:src="@drawable/reseed_logo_h"
+          app:layout_constraintStart_toStartOf="parent"
+          app:layout_constraintTop_toTopOf="parent"
+          app:layout_constraintBottom_toBottomOf="parent"/>
+        <com.google.android.material.imageview.ShapeableImageView
+          android:id="@+id/user_image"
+          style="@style/NavDrawerHeader.Image"
+          app:imageUrl="@{user.photoUrl}"
+          android:layout_marginEnd="24dp"
+          tools:background="@drawable/reseed_logo_circle"
+          app:layout_constraintEnd_toEndOf="parent"
+          app:layout_constraintTop_toTopOf="parent"
+          app:layout_constraintBottom_toBottomOf="parent"/>
+      </androidx.constraintlayout.widget.ConstraintLayout>
     </LinearLayout>
     <LinearLayout
       style="@style/NavDrawerHeader"
