--- a/ground/src/main/res/layout/sign_in_frag.xml
+++ b/ground/src/main/res/layout/sign_in_frag.xml
@@ -85,7 +85,7 @@
         android:layout_width="280dp"
         android:layout_height="180dp"
         android:scaleType="fitCenter"
-        app:srcCompat="@drawable/ground_logo" />
+        app:srcCompat="@drawable/reseed_logo_v" />
 
     </LinearLayout>
 
