--- a/ground/src/main/res/values/styles.xml
+++ b/ground/src/main/res/values/styles.xml
@@ -85,9 +85,12 @@
     <item name="android:layout_marginLeft">24dp</item>
   </style>
 
-  <style name="NavDrawerHeader.Image">
+  <style name="NavDrawerHeader.Title">
     <item name="android:layout_width">@dimen/nav_drawer_profile_image_size</item>
     <item name="android:layout_height">@dimen/nav_drawer_profile_image_size</item>
+  </style>
+
+  <style name="NavDrawerHeader.Image" parent="NavDrawerHeader.Title">
     <item name="shapeAppearanceOverlay">@style/ShapeAppearanceOverlay.App.CornerSize50Percent</item>
   </style>
 
